package com.example.chronos.model;

public enum FacilityType {
    BONDS,
    MONEY
}
